--- a/hexlet_code/.rubocop.yml
+++ b/hexlet_code/.rubocop.yml
@@ -1,13 +1,21 @@
 AllCops:
-  TargetRubyVersion: 2.6
+  TargetRubyVersion: 3.2
+  SuggestExtensions: false
+  NewCops: enable
 
 Style/StringLiterals:
   Enabled: true
   EnforcedStyle: double_quotes
 
+Style/Documentation:
+  Enabled: false
+
 Style/StringLiteralsInInterpolation:
   Enabled: true
   EnforcedStyle: double_quotes
+
+Style/ClassVars:
+  Enabled: false
 
 Layout/LineLength:
   Max: 120
