--- a/.github/workflows/subfolder-check.yml
+++ b/.github/workflows/subfolder-check.yml
@@ -11,4 +11,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: ./hexlet-code/.github/workflows
+    - uses: ./hexlet-code/.github/workflows/main.yml
