--- a/.github/workflows/hexlet-code.yml
+++ b/.github/workflows/hexlet-code.yml
@@ -27,8 +27,5 @@ jobs:
     - name: Install dependencies
       run: make install
 
-    - name: Run Rubocop
-      run: make lint
-    
-    - name: Run Tests
-      run: make test
+    - name: Run linter and tests
+      run: make start-rake
